--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@finsweet/eslint-config": "^1.1.2",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
+    "@vue/reactivity": "^3.2.26",
     "cross-env": "^7.0.3",
     "dotenv": "^10.0.0",
     "esbuild": "^0.13.14",
@@ -39,5 +40,11 @@
     "eslint-plugin-prettier": "^4.0.0",
     "prettier": "^2.4.1",
     "typescript": "^4.5.2"
+  },
+  "dependencies": {
+    "@finsweet/ts-utils": "^0.27.6",
+    "@nanostores/vue": "^0.5.3",
+    "nanostores": "^0.5.8",
+    "petite-vue": "^0.4.0"
   }
 }
